# konsole-companion

./: .gitignore  LICENSE  PKGBUILD  README.md  pyproject.toml
data/: konsole-companion-daemon.service  konsole-companion.desktop
src/konsole_companion/: config.py  daemon.py  gui.py  konsole.py  profiles.py  tabsets.py  theme.py
